--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <title>reveal.js</title>
-    
+
+    <link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass.css">
+    <link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass-mono.css">
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/extra.css">
     <link rel="stylesheet" href="css/theme/serif.css">
