--- a/index.html
+++ b/index.html
@@ -27,14 +27,26 @@
   <body>
     <div class="reveal">
       <div class="slides">
-	<section><h2>Say Good-Bye To</h2>
-	  <h1>"Hello, world"</h1>
-	</section>
 	<section>
-	  <h1>Or</h1>
-	  <h2>How to stop programing in C in every language</h2>
-	  <h1 class='fragment'>Once and for all</h1>
+	  <section><h2>Say Good-Bye To</h2>
+	    <h1>"Hello, world"</h1>
+	  </section>
+	  <section>
+	    <h2>Or</h2>
+	    <h3 class='fragment'>How to stop programming in C in every language</h3>
+	    <h1 class='fragment'>Once and for all</h1>
+	  </section>
+	  <section>
+	    <h1>This is me</h1>
+	  </section>
 	</section>
+
+	<section>
+	  <h2>Credits</h2>
+	  <ul class='credits'>
+	  </ul>
+	</section>
+
       </div>
     </div>
     
