--- a/index.html
+++ b/index.html
@@ -36,14 +36,90 @@
 	    <h3 class='fragment'>How to stop programming in C in every language</h3>
 	    <h1 class='fragment'>Once and for all</h1>
 	  </section>
-	  <section>
+	  <section data-background='https://farm4.staticflickr.com/3633/5735091026_39f04c2596_b_d.jpg'>
 	    <h1>This is me</h1>
+	    <h4 class='fragment'>And why the hell would I want to
+    include some bio or resumé here when I have only a few minutes to
+	      deliver the talk</h4>
+	  </section>
+	  <section>
+	    <h1>Actually...</h1>
+	    <h2 class='fragment'>This <em>is</em> important</h2>
+	    <h1 class='fragment'><code>@jjmerelo</code></h1>
 	  </section>
 	</section>
 
 	<section>
+	  <section><h1>You've probably seen this</h1>
+	    <pre><code>#include<stdio.h>
+main()
+{
+	      printf("Hello World");
+}
+	    </code></pre>
+	  </section>
+
+	  <section><h1>Maybe this</h1>
+	    <pre><code>#!/usr/bin/env perl6
+say "Hello þor";
+	    </code></pre>
+	  </section>
+	  
+	  <section
+	      data-background='https://farm6.staticflickr.com/5225/5673344371_96f096fa8b_b_d.jpg'><h1>And
+	      even this</h1>
+<pre><code>public class HelloWorld {
+
+    public static void main(String[] args) {
+        // Prints "Hello, World" to the terminal window.
+        System.out.println("Hello, World");
+    }
+
+}</code></pre>	
+	    </section>
+
+	    <section
+	      data-background='https://farm8.staticflickr.com/7312/10819415496_1276873f35_k_d.jpg'><h1>Or
+	      this</h1>
+	      <pre class='fragment'><code>    object HelloWorld {
+      def main(args: Array[String]): Unit = {
+        println("Hello, FOSDEM!")
+      }
+    }
+	      </code></pre>
+
+	    </section>
+
+	</section>
+
+	<section>
+	  
+	  <section>
+	    <h1>Seen it in this book</h1>
+	    <img src='img/goodbye.png' alt='Learning new languages'>
+	  </section>
+	  
+	  <section
+	    data-background='https://farm7.staticflickr.com/6171/6186490799_52454d9ebb_b_d.jpg'
+alt='server farm'>
+	    
+	    <h1>Have you ever used it here?</h1>
+	  </section>
+	</section>
+	
+
+	      <!-- Credits -->
+	<section>
 	  <h2>Credits</h2>
 	  <ul class='credits'>
+	    <li>Arrows by <a
+	      href='https://www.flickr.com/photos/49889874@N05/5735091026/in/photolist-9JMQKL-4gFHUr-acKnbY-9ntsYy-aqzVut-nA2KzE-9YHosZ-bGzfJ4-aA8Bsk-czQXUJ-9xKXxe-dBYvCf-7cb7Lz-3nNTkJ-6GFEdb-2Ep8sf-abD6zs-BKjiH-hQm5h-gVvq9u-2KxQ9F-dtAm8Q-9sJ1ne-jsqAwo-bK3UVT-7D6rE1-9gymx9-aLGrRp-5b5YFE-3ceZr-iLnUJk-nCaGZe-7Au4Az-ce22ZA-q3TAjM-65dAGD-21uyZ5-aYKPGR-onKp9c-8hKRo6-8G2NbJ-cvrnq5-8tzye7-miV7h-cr95YQ-bW5keS-4yMT82-pXwEZr-5JfAAJ-btcriR'>Mark
+	      Falardeau</a></li>
+	    <li>Yelling by <a
+	      href='https://www.flickr.com/photos/domiriel/5673344371/in/photolist-9DknCg-5uetri-9gXgzW-oivCj6-gftfmS-Gci3T-4z9Q9d-dDM3Eh-5vDSaf-a7Vbsy-JU7VV-4z5B84-anKeKo-4z9TrA-oAGaPB-4z5uFp-k2RM9-iQzTQg-4z5vot-6u6Agn-4z5BRP-7EUoGG-9uwG2S-4z9P3Y-7rBHMu-ch64CQ-5XwnhG-hu5khu-4z5ymX-6vcSXN-5zR9yt-4z5yTe-qnF1JA-dDF9Yx-4z9TEf-dthtvX-4z9PtS-8K7FZr-97zWNq-7KhfJz-qfafnW-4z5uUX-4z5vv8-58BWGK-4yjPXz-4z5yqD-4z5wVp-4z9SCb-7uhncG-4z9Umj'>Domiriel</a></li>
+	    <li>Kid screaming by <a
+	      href='https://www.flickr.com/photos/theothernate/10819415496/'>Nate</a></li>
+	    <li>Server farm by <a href='https://www.flickr.com/photos/lansmash/6186490799/'>LanSmash</a></li>
 	  </ul>
 	</section>
 
@@ -57,7 +133,7 @@
       // More info https://github.com/hakimel/reveal.js#configuration
       Reveal.initialize({
       history: true,
-      
+      width: '95%',
       // More info https://github.com/hakimel/reveal.js#dependencies
       dependencies: [
       { src: 'plugin/markdown/marked.js' },
