--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@ say "Hello þor";
 	<section>
 	  
 	  <section>
-	    <h1>Seen it in this book</h1>
 	    <img src='img/goodbye.png' alt='Learning new languages'>
+	    <aside class='notes'>This is the way almost every single
+	      book and tutorial starts</aside>
 	  </section>
 	  
 	  <section
