--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <title>reveal.js</title>
+    <title>Say Goodbye to hello-world by JJ Merelo</title>
 
     <link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass.css">
     <link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass-mono.css">
