Advancing the agenda

--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
 
 	<section>
 	  <section><h1>You've probably seen this</h1>
-	    <pre><code>#include<stdio.h>
+	    <pre><code>#include&lt;stdio.h>
 main()
 {
 	      printf("Hello World");
-}
-	    </code></pre>
+}</code></pre>
 	  </section>
 
 	  <section><h1>Maybe this</h1>
