Add slides for what the world is not

--- a/index.html
+++ b/index.html
@@ -106,6 +106,33 @@ alt='server farm'>
 	    <h1>Have you ever used it here?</h1>
 	  </section>
 	</section>
+
+	<section>
+	  <section><h1>The world of programming is <strong>not</strong>... </h1>
+	    <aside class='notes'>Taken mainly from my article <a href='https://medium.com/@jjmerelo/teaching-computer-languages-we-re-doing-it-wrong-9baf7548904a#.dklnsvgyf'>Programming: we're doing it wrong</a>.</aside>
+	  </section>
+	  <section><h1>…Limited</h1>
+	    <h2 class='fragment'>to a single language</h2>
+	  </section>
+	  <section>
+	    <h1>…Monolithic</h1>
+	    <h2 class='fragment'>single-thread and computer desktop architectures</h2>
+	  </section>
+	  <section>
+	    <h1>…Lonely</h1>
+	    <h2 class='fragment'>You'll never code alone</h2>
+	  </section>
+	  <section>
+	    <h1>…Syntax-focused</h1>
+	    <h2 class='fragment'>But focused on best practices</h2>
+	  </section>
+	  <section><h1>…Isolated</h1>
+	    <h2 class='fragment'>but the core of a ecosystem of tools and libraries</h2>
+	  </section>
+	  <section><h1>Proprietary</h1>
+	    <h2 class='fragment'>Coding is the killer app of free software</h2>
+	  </section>
+	</section>
 	
 
 	      <!-- Credits -->
