--- a/index.html
+++ b/index.html
@@ -133,9 +133,40 @@ alt='server farm'>
 	    <h2 class='fragment'>Coding is the killer app of free software</h2>
 	  </section>
 	</section>
-	
 
-	      <!-- Credits -->
+	<section>
+	  <section>
+	    <h1>Let's start programming all over again</h1>
+	    <aside class='notes'>This started with <a href='https://medium.com/@jjmerelo/learning-to-program-good-edfdc939753e#.6nq5bh5hd'>Learning to program good</a>, continued with <a href='http://jj.github.io/lpw16'>this presentation</a> and <a href='https://github.com/JJ/prog21/blob/master/book.org'>this manifesto</a> but really gelled with <a href='http://jj.github.io/perl6em/perl6.html'>this experience on teaching Perl6 from scratch</a></aside>
+	  </section>
+	  <section>
+	    <h1>Expressions are expressive</h1>
+	    <h2 class='fragment'>And REPLs are great sandboxes</h2>
+	  </section>
+	  <section>
+	    <h1>Learn to fail</h1>
+	    <h2 class='fragment'>And raise all over again</h2>
+	  </section>
+	  <section>
+	    <h1>git before <code>open</code></h1>
+	    <h2 class='fragment'>Repos are the natural environment of programs</h2>
+	    <aside class='notes'>And you should learn how to use them for team work even before you decide to create the first file. You shouls select the license, for instance</aside>
+	  </section>
+	  <section>
+	    <h1>Learn <strong>all</strong> languages</h1>
+	    <h2 class='fragment'>Failing that, JS + HTML</h2>
+	  </section>
+	  <section>
+	    <h1>Functions rock</h1>
+	    <h2 class='fragment'>All languages are functional, nowadays</h2>
+	  </section>
+	  <section>
+	    <h1><strong>Cloud</strong> by default</h1>
+	    <h2 class='fragment'>It's where you run stuff</h2>
+	    <aside class='notes'>Be it PaaS, IaaS, serverless or all of them, be ready to deploy and run stuff in the cloud. The world is not made of desktops</aside>
+	  </section>
+	</section>
+	<!-- Credits -->
 	<section>
 	  <h2>Credits</h2>
 	  <ul class='credits'>
