--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@ alt='server farm'>
 	  <section>
 	    <h1>Learn <strong>all</strong> languages</h1>
 	    <h2 class='fragment'>Failing that, JS + HTML</h2>
+	    <aside class='notes'>Enphasis in learning to learn and
+	  common traits of all languages, as well as paradigms. One
+	      size does not fit all, and one printf does not fit all</aside>
 	  </section>
 	  <section>
 	    <h1>Functions rock</h1>
@@ -166,18 +169,55 @@ alt='server farm'>
 	    <aside class='notes'>Be it PaaS, IaaS, serverless or all of them, be ready to deploy and run stuff in the cloud. The world is not made of desktops</aside>
 	  </section>
 	</section>
+
+	<section>
+	  <section
+	    data-background='https://farm3.staticflickr.com/2590/4189712810_6b76cb784a_b_d.jpg'>
+	    <h1>What can we do?</h1>
+	    <aside class='notes'>You are probably not teaching a
+	  computer language, or writing tutorials, or even learning
+	  new ones. First thing: do learn a new language every 6
+	  months or so. In many cases, old languages will be enough
+	      since they change o so often... Or even javascript frameworks</aside>
+	  </section>
+	  <section data-background='https://farm1.staticflickr.com/1/1154118_72d0908ad9_b_d.jpg'>
+	    <h1>Make change</h1>
+	    <h1 class='fragment'>Request change</h1>
+	  </section>
+	  <section
+	  data-background='https://farm2.staticflickr.com/1217/1341937768_15999125db_o_d.png'
+alt='goodbye '>
+	    <h1>And say goodbye to hello world</h1>
+	  </section>
+	</section>
+
+	<section>
+	  <h1>Thanks!</h1>
+	  <h2>Don't miss tomorrow <strong>Perl 6, the musical</strong> in the Perl
+	    devroom</h2>
+	</section>
 	<!-- Credits -->
 	<section>
 	  <h2>Credits</h2>
 	  <ul class='credits'>
 	    <li>Arrows by <a
-	      href='https://www.flickr.com/photos/49889874@N05/5735091026/in/photolist-9JMQKL-4gFHUr-acKnbY-9ntsYy-aqzVut-nA2KzE-9YHosZ-bGzfJ4-aA8Bsk-czQXUJ-9xKXxe-dBYvCf-7cb7Lz-3nNTkJ-6GFEdb-2Ep8sf-abD6zs-BKjiH-hQm5h-gVvq9u-2KxQ9F-dtAm8Q-9sJ1ne-jsqAwo-bK3UVT-7D6rE1-9gymx9-aLGrRp-5b5YFE-3ceZr-iLnUJk-nCaGZe-7Au4Az-ce22ZA-q3TAjM-65dAGD-21uyZ5-aYKPGR-onKp9c-8hKRo6-8G2NbJ-cvrnq5-8tzye7-miV7h-cr95YQ-bW5keS-4yMT82-pXwEZr-5JfAAJ-btcriR'>Mark
+	      href='https://www.flickr.com/photos/49889874@N05/5735091026'>Mark
 	      Falardeau</a></li>
 	    <li>Yelling by <a
-	      href='https://www.flickr.com/photos/domiriel/5673344371/in/photolist-9DknCg-5uetri-9gXgzW-oivCj6-gftfmS-Gci3T-4z9Q9d-dDM3Eh-5vDSaf-a7Vbsy-JU7VV-4z5B84-anKeKo-4z9TrA-oAGaPB-4z5uFp-k2RM9-iQzTQg-4z5vot-6u6Agn-4z5BRP-7EUoGG-9uwG2S-4z9P3Y-7rBHMu-ch64CQ-5XwnhG-hu5khu-4z5ymX-6vcSXN-5zR9yt-4z5yTe-qnF1JA-dDF9Yx-4z9TEf-dthtvX-4z9PtS-8K7FZr-97zWNq-7KhfJz-qfafnW-4z5uUX-4z5vv8-58BWGK-4yjPXz-4z5yqD-4z5wVp-4z9SCb-7uhncG-4z9Umj'>Domiriel</a></li>
+	      href='https://www.flickr.com/photos/domiriel/5673344371/'>Domiriel</a></li>
 	    <li>Kid screaming by <a
 	      href='https://www.flickr.com/photos/theothernate/10819415496/'>Nate</a></li>
-	    <li>Server farm by <a href='https://www.flickr.com/photos/lansmash/6186490799/'>LanSmash</a></li>
+	    <li>Server farm by <a
+	      href='https://www.flickr.com/photos/lansmash/6186490799/'>LanSmash</a></li>
+	    <li>Black silhouette by <a
+	      href='https://www.flickr.com/photos/hapal/4189712810/'>Hamid
+	      Najafi</a></li>
+	    <li>Change by <a
+	      href='https://www.flickr.com/photos/joshua/1154118/'>Joshua
+	      Rappeneker</a></li>
+	    <li><a
+	  href='https://www.flickr.com/photos/wherearethejoneses/1341937768/'>Good
+	      bye by the Joneses</a></li>
 	  </ul>
 	</section>
 
