Some notes to finish

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ alt='server farm'>
 	  <section data-background='https://farm1.staticflickr.com/1/1154118_72d0908ad9_b_d.jpg'>
 	    <h1>Make change</h1>
 	    <h1 class='fragment'>Request change</h1>
+
+	    <aside class='notes'>You will probably learn 2-3 languages in the next future. Probably by yourself. Once you've done it, try and rewrite tutorials the way you would have liked to do it. Teach your coworkers. Teach your family! There are not so many people programming, or programming well, and they need you for this. Just be change!</aside>
 	  </section>
 	  <section
 	  data-background='https://farm2.staticflickr.com/1217/1341937768_15999125db_o_d.png'
