--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@ say "Hello þor";
 <pre><code>public class HelloWorld {
 
     public static void main(String[] args) {
-        // Prints "Hello, World" to the terminal window.
+        // Prints "Hello, World" to console.
         System.out.println("Hello, World");
     }
 
 }</code></pre>	
-	    </section>
+	    </section> 
 
 	    <section
 	      data-background='https://farm8.staticflickr.com/7312/10819415496_1276873f35_k_d.jpg'><h1>Or
@@ -84,8 +84,7 @@ say "Hello þor";
       def main(args: Array[String]): Unit = {
         println("Hello, FOSDEM!")
       }
-    }
-	      </code></pre>
+    } </code></pre>
 
 	    </section>
 
@@ -93,6 +92,9 @@ say "Hello þor";
 
 	<section>
 	  
+	  <section>
+	    <h1>Read it in the the book</h1>
+	  </section>
 	  <section>
 	    <img src='img/goodbye.png' alt='Learning new languages'>
 	    <aside class='notes'>This is the way almost every single
