Adapting to format

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ alt='server farm'>
 
 	<section>
 	  <section>
-	    <h1>Let's start programming all over again</h1>
+	    <h1>Let's kickstart <em>programming</em> all over again</h1>
 	    <aside class='notes'>This started with <a href='https://medium.com/@jjmerelo/learning-to-program-good-edfdc939753e#.6nq5bh5hd'>Learning to program good</a>, continued with <a href='http://jj.github.io/lpw16'>this presentation</a> and <a href='https://github.com/JJ/prog21/blob/master/book.org'>this manifesto</a> but really gelled with <a href='http://jj.github.io/perl6em/perl6.html'>this experience on teaching Perl6 from scratch</a></aside>
 	  </section>
 	  <section>
@@ -184,7 +184,7 @@ alt='server farm'>
 	  </section>
 	  <section data-background='https://farm1.staticflickr.com/1/1154118_72d0908ad9_b_d.jpg'>
 	    <h1>Make change</h1>
-	    <h1 class='fragment'>Request change</h1>
+	    <h1 class='fragment'>Ask for it</h1>
 
 	    <aside class='notes'>You will probably learn 2-3 languages in the next future. Probably by yourself. Once you've done it, try and rewrite tutorials the way you would have liked to do it. Teach your coworkers. Teach your family! There are not so many people programming, or programming well, and they need you for this. Just be change!</aside>
 	  </section>
