Changes last slide

--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@ alt='server farm'>
 	  <section
 	  data-background='https://farm2.staticflickr.com/1217/1341937768_15999125db_o_d.png'
 alt='goodbye '>
-	    <h1>And say goodbye to hello world</h1>
+	    <h1>And say goodbye</h1>
+	  </section>
+	  <section data-background='https://farm3.staticflickr.com/2229/1717425332_a0a0e87ef1_o_d.jpg'>
+	    <h1> to <code>hello world</code></h1>
 	  </section>
 	</section>
 
@@ -221,7 +224,8 @@ alt='goodbye '>
 	      Rappeneker</a></li>
 	    <li><a
 	  href='https://www.flickr.com/photos/wherearethejoneses/1341937768/'>Good
-	      bye by the Joneses</a></li>
+		bye by the Joneses</a></li>
+	    <li><a href='https://www.flickr.com/photos/davidrn/1717425332/'>Hello World by David</a></li>
 	  </ul>
 	</section>
 
